# fmpy

./: .gitignore  README.md  build_package.sh  client.py  pyproject.toml  urls.py
src/fmpy/: client.py  urls.py  utils.py
