[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmpy_qi"
version = "0.0.1"
authors = [
  { name="Nicolas THIERY", email="nicles.thiery@gmail.com" },
]
description = "A python wrapper for the Financial Modeling Prep API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  'numpy >= 1.24.3',
  'pandas >= 2.0.0',
  'urllib3 >= 1.26.15',
  'requests >= 2.28.2',
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/NicolasThiery/fmpy"
"Bug Tracker" = "https://github.com/NicolasThiery/fmpy/issues"