[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmpy_qi"
version = "0.1.6"
authors = [
  { name="Nicolas THIERY", email="nicles.thiery@gmail.com" },
]
description = "A python wrapper for the Financial Modeling Prep API"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'urllib3>=1.23',
    'requests>=2.5.4.1',
    'pandas>=2.0.0',
    ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
pandas = "^2.0.0"

[project.urls]
"Homepage" = "https://github.com/NicolasThiery/fmpy"
"Bug Tracker" = "https://github.com/NicolasThiery/fmpy/issues"